trafficdemo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-demo
  namespace: excalidraw
spec:
  selector:
    app: excalidraw-demo
  ports:
  - port: 80
    targetPort: 80
