trafficdemo/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  host: excalidraw
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
